# testcmake

./: .gitignore  CMakeLists.txt  CMakePresets.json  fic2.cpp  fic2.hpp  helloworld.cpp  testc.c  testc.h
src/: fic2.cpp  fic2.hpp  test2.c  test2.h  testc.c  testc.h
